Fix newer java 9 deprecation warnings: InputEvent.getModifiers -> getModifiersEx, MASK -> DOWN_MASK, Float -> valueOf, Class.newInstance +getDeclaredConstructor; make SquaresPanel.shiftKeysMask private